--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # test1
-TEST=gh uploaded 2023-09-26T01:26:38.643Z
+TEST=gh_uploaded_2023-09-26T01:26:38.643Z
 TEST3=test
 TEST1=test1
 TEST1111=test1112
