package: dotenv types/node

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/node": "^20.6.5",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "gh": "^2.8.9"
   }
 }
